This is my commitment practicing the use of ESLint.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,15 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-static-inline-styles": ["error", {
+        "allowBinding": false
+      }],
+      "vue/no-duplicate-attributes": ["error", {
+        "allowCoexistClass": false,
+        "allowCoexistStyle": true
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
